--- a/parts/header.html
+++ b/parts/header.html
@@ -1,13 +1,15 @@
-<!-- wp:group {"tagName":"div","style":{"spacing":{"padding":{"top":"var:preset|spacing|0","bottom":"var:preset|spacing|0"}}},"layout":{"type":"constrained"}} -->
+<!-- wp:group {"tagName":"div","layout":{"type":"constrained"}} -->
 <div class="wp-block-group">
-	<!-- wp:group {"align":"full","layout":{"type":"flex","justifyContent":"space-between","flexWrap":"wrap"}} -->
+	<!-- wp:group {"align":"full","layout":{"type":"flex","justifyContent":"space-between","flexWrap":"wrap","verticalAlignment":"center"}} -->
 	<div class="wp-block-group alignfull">
-		<!-- wp:group {"layout":{"type":"flex"}} -->
+		<!-- wp:group {"layout":{"type":"flex","verticalAlignment":"center"}} -->
 		<div class="wp-block-group">
 			<!-- wp:site-logo {"width":140} /-->
 			<!-- wp:site-title /-->
 		</div>
 		<!-- /wp:group -->
+
+		<!-- wp:navigation {"layout":{"type":"flex","justifyContent":"right"}} /-->
 	</div>
 	<!-- /wp:group -->
 </div>
