--- a/parts/footer.html
+++ b/parts/footer.html
@@ -1,28 +1,5 @@
-<!-- wp:group {"align":"full","style":{"spacing":{"padding":{"top":"var:preset|spacing|70","bottom":"var:preset|spacing|70"}}},"layout":{"type":"constrained"}} -->
-<div class="wp-block-group alignfull"
-	style="padding-top:var(--wp--preset--spacing--70);padding-bottom:var(--wp--preset--spacing--70)"></div>
-<!-- /wp:group -->
-
-<!-- wp:group {"align":"full","style":{"spacing":{"padding":{"top":"var:preset|spacing|20","bottom":"var:preset|spacing|20"}}},"layout":{"type":"constrained"}} -->
-<div class="wp-block-group alignfull"
-	style="padding-top:var(--wp--preset--spacing--20);padding-bottom:var(--wp--preset--spacing--20)">
-	<!-- wp:group {"align":"full","layout":{"type":"flex","justifyContent":"space-between"}} -->
-	<div class="wp-block-group alignfull"><!-- wp:group {"layout":{"type":"flex","allowOrientation":false}} -->
-		<div class="wp-block-group"><!-- wp:paragraph {"fontSize":"extra-small"} -->
-			<p class="has-extra-small-font-size">
-				Copyright 2025 </p>
-			<!-- /wp:paragraph -->
-
-			<!-- wp:site-title {"level":0,"fontSize":"extra-small"} /-->
-		</div>
-		<!-- /wp:group -->
-
-		<!-- wp:social-links {"className":"is-style-logos-only"} -->
-		<ul class="wp-block-social-links is-style-logos-only">
-			<!-- wp:social-link {"url":"https://wordpress.org","service":"wordpress"} /-->
-		</ul>
-		<!-- /wp:social-links -->
-	</div>
-	<!-- /wp:group -->
+<!-- wp:group {"tagName":"div","layout":{"type":"constrained"}} -->
+<div class="wp-block-group">
+	<!-- wp:pattern {"slug":"webentwicklerin/footer-links"} /-->
 </div>
 <!-- /wp:group -->
