--- a/parts/post-meta.html
+++ b/parts/post-meta.html
@@ -1,6 +1,6 @@
 <!-- wp:group {"layout":{"type":"flex"}} -->
 <div class="wp-block-group">
     <!-- wp:post-date /-->
-    <!-- wp:post-terms {"term":"category","prefix":"Kategorien: "} /-->
+    <!-- wp:post-terms {"term":"category","prefix":"Categories: "} /-->
 </div>
 <!-- /wp:group -->
